# ChangeLog for dev-python/nagparser
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*nagparser-0.1_pre20140419 (19 Apr 2014)

  19 Apr 2014; Johann Schmitz <ercpe@gentoo.org> +metadata.xml,
  +nagparser-0.1_pre20140419.ebuild:
  Added ebuild nagparser