@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/nagparser
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  dev-python/nagparser: Add github to remote-id in metadata.xml
 
 *nagparser-0.1_pre20140419 (19 Apr 2014)
 
